--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,13 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:base"
+    "config:base",
+    ":disableDependencyDashboard",
+    "schedule:weekends",
+    "group:allNonMajor",
   ]
+  "assignees": ["@emojirades/platform"],
+  "pip_requirements": {
+    "fileMatch": ["requirements-dev.txt"]
+  }
 }
